<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000"
    android:orientation="vertical"
    android:textColor="@color/common_google_signin_btn_text_dark_pressed">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_100sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_25sdp"
            android:paddingTop="@dimen/_12sdp"
            android:paddingBottom="@dimen/_18sdp"
            android:text="@string/soundwatch"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textSize="30sp" />
        <!--    <Button-->
        <!--        android:id="@+id/button"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:background="@drawable/rounablebutton"-->
        <!--        android:padding="10sp"-->
        <!--        android:textColor="#008ad3"-->
        <!--        android:text="Favourite Places"-->
        <!--        android:layout_gravity="top|right"/>-->

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:overScrollMode="always">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000"
            android:orientation="vertical"
            android:scaleX="1.2"
            android:scaleY="1.2">

            <CheckBox
                android:id="@+id/speech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_large"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/speech"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />

            <CheckBox
                android:id="@+id/knocking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/knocking"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />

            <CheckBox
                android:id="@+id/door_in_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/door_in_use"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />


            <CheckBox
                android:id="@+id/fire_smoke_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/fire_smoke_alarm"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />

            <CheckBox
                android:id="@+id/phone_ring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/phone_ring"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />

            <CheckBox
                android:id="@+id/water_running"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/water_running"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />


            <CheckBox
                android:id="@+id/microwave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/microwave"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />

            <CheckBox
                android:id="@+id/dishwasher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/dishwasher"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />

            <CheckBox
                android:id="@+id/laughing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/laughing"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />

            <CheckBox
                android:id="@+id/car_honk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/car_honk"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />

            <CheckBox
                android:id="@+id/vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:autoSizeTextType="uniform"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/vehicle"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />

            <CheckBox
                android:id="@+id/dog_bark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/dog_bark"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />
            <CheckBox
                android:id="@+id/drill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/drill"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />
            <CheckBox
                android:id="@+id/vacuum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/vacuum"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />
            <CheckBox
                android:id="@+id/baby_cry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/baby_cry"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />
            <CheckBox
                android:id="@+id/chopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/chopping"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />
            <CheckBox
                android:id="@+id/shaver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/shaver"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />
            <CheckBox
                android:id="@+id/tooth_brush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/tooth_brush"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />
            <CheckBox
                android:id="@+id/blender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/blender"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />
            <CheckBox
                android:id="@+id/door_bell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/door_bell"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />
            <CheckBox
                android:id="@+id/toilet_flush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/toilet_flush"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />
            <CheckBox
                android:id="@+id/hair_dryer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/margin_tiny"
                android:buttonTint="@color/wl_blue"
                android:checked="true"
                android:onClick="onCheckBoxClick"
                android:text="@string/hair_dryer"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>